--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^3.0.0-beta.0",
     "@angular/animations": "~10.1.5",
     "@angular/cdk": "^10.2.5",
     "@angular/common": "~10.1.5",
@@ -21,6 +22,9 @@
     "@angular/platform-browser": "~10.1.5",
     "@angular/platform-browser-dynamic": "~10.1.5",
     "@angular/router": "~10.1.5",
+    "@google/maps": "^1.1.3",
+    "@types/googlemaps": "^3.39.13",
+    "agm-direction": "^0.8.8",
     "jwt-decode": "^3.1.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
